--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -69,7 +69,9 @@
                 </div>
     
                 <!-- Submit Button -->
-                <button type="submit" class="submit">Submit new issue</button>
+                <section class="flex btn-wrapper">
+                    <button type="submit" class="submit btn">Submit new issue</button>
+                </section>
             </form>
         </section>
         
