--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,7 @@
 <%- include('../includes/header') %>
 
 <main class="container">
-    <section class="blue-on-green section" id="5-leerresultaat">
+    <section class="section blue-on-green" id="5-leerresultaat">
         
 
         
