--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -23,6 +23,7 @@ html {
     --gh-background: #0D1117;
     --gh-form: #010409;
     --gh-header: #1A1E25;
+    --gh-border: #30363d;
 
 
 
@@ -147,7 +148,7 @@ a{
 .top{    
     height: 4.5em;
     width: 100%;
-    box-shadow: inset 0 -1px 0 var(--gh-header);
+    box-shadow: inset 0 -1px 0 var(--gh-border);
 }
 
 
@@ -171,7 +172,6 @@ a{
     margin-left: 1em;
     font-weight: 600;
     color: #c9d1d9;
-    border-bottom-color: var(--color-primer-border-active);
     outline-offset: -8px;
 }
 
@@ -201,18 +201,20 @@ a{
     min-width: 30em;
     max-height: 20em;
     padding: .25em;
-    border: var(--gh-header) 1px solid;
+    border: var(--gh-border) 1px solid;
+    border-radius: 6px;
 }
 
 input{
-    width: 100%;
+    width: 94.565%;
+    margin-bottom: .3em;
     background-color: var(--gh-form);
     font-size: 16px;
     padding: 5px 12px;
     line-height: 20px;
     color: #c9d1d9;
     border: 1px solid #30363d;
-    border-radius: 6px
+    border-radius: 6px;
 }
 
 #comment{
@@ -222,7 +224,6 @@ input{
 
 .btn-wrapper{
     justify-content: flex-end;
-    align-items: ;
 }
 
 .btn {
